flux/manifests/04-apps/media/servers/jellyfin/tailnet-httproute.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kubernetes-sigs/gateway-api/refs/heads/main/config/crd/experimental/gateway.networking.k8s.io_httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-tailnet
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: tailnet-gateway
      namespace: cilium-system
  hostnames:
    - "jellyfin.tailnet.apocrathia.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: jellyfin
          port: 80
